--- a/iQuiz/iQuiz/Base.lproj/Main.storyboard
+++ b/iQuiz/iQuiz/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QHJ-eC-lop">
-                                <rect key="frame" x="65" y="137" width="245" height="20.5"/>
+                                <rect key="frame" x="65" y="93" width="245" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="245" id="3sC-66-w8Y"/>
                                     <constraint firstAttribute="height" constant="20.5" id="VVw-RK-vf1"/>
@@ -100,7 +100,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRs-yI-gLe">
-                                <rect key="frame" x="16" y="225" width="139" height="30"/>
+                                <rect key="frame" x="16" y="181" width="139" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="139" id="1PY-5B-8I0"/>
                                     <constraint firstAttribute="height" constant="30" id="FzJ-6E-MvS"/>
@@ -112,7 +112,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bbm-pQ-tn5">
-                                <rect key="frame" x="236" y="225" width="139" height="30"/>
+                                <rect key="frame" x="236" y="181" width="139" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="139" id="kKq-Bb-2sz"/>
                                     <constraint firstAttribute="height" constant="30" id="ngL-cH-Mc8"/>
@@ -124,7 +124,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V9M-xc-AHG">
-                                <rect key="frame" x="16" y="318" width="139" height="30"/>
+                                <rect key="frame" x="16" y="274" width="139" height="74"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="139" id="QFb-IF-jBH"/>
                                     <constraint firstAttribute="height" constant="30" id="URE-G9-3Ym"/>
@@ -136,7 +136,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oVs-iT-Y2o">
-                                <rect key="frame" x="236" y="318" width="123" height="30"/>
+                                <rect key="frame" x="236" y="274" width="123" height="74"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="123" id="Q2Q-0d-prW"/>
                                     <constraint firstAttribute="height" constant="30" id="Wlp-d3-Lqf"/>
@@ -148,7 +148,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="submit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="15U-91-F9S">
-                                <rect key="frame" x="163" y="513" width="49" height="30"/>
+                                <rect key="frame" x="163" y="469" width="49" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="49" id="E5B-mY-dRP"/>
                                     <constraint firstAttribute="height" constant="30" id="WKd-gD-yfV"/>
@@ -159,7 +159,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="home" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="llF-6m-Dao">
-                                <rect key="frame" x="167" y="569" width="41" height="30"/>
+                                <rect key="frame" x="167" y="525" width="41" height="74"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="41" id="ISs-zn-F1T"/>
                                     <constraint firstAttribute="height" constant="30" id="yF5-gS-dwg"/>
@@ -172,6 +172,7 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="V9M-xc-AHG" firstAttribute="top" secondItem="qRs-yI-gLe" secondAttribute="bottom" constant="30" id="30v-LQ-I0b"/>
                             <constraint firstItem="llF-6m-Dao" firstAttribute="top" secondItem="15U-91-F9S" secondAttribute="bottom" constant="26" id="4VD-A8-aWo"/>
@@ -318,6 +319,9 @@
                                 <include reference="hgr-3C-g1t"/>
                             </mask>
                         </variation>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="mbl-3y-oAh" appends="YES" id="w2f-q6-cgm"/>
+                        </connections>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Title" id="n1O-X9-MwK"/>
@@ -332,6 +336,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sRQ-Wp-oIe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="left" id="mbl-3y-oAh">
+                    <connections>
+                        <segue destination="3Jf-LY-GrY" kind="show" id="LfS-9r-HWJ"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1668" y="115.59220389805098"/>
         </scene>
@@ -347,27 +356,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Correct or not" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wa-oO-y0f">
-                                <rect key="frame" x="72" y="190" width="230" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Right/Wrong" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wa-oO-y0f">
+                                <rect key="frame" x="72" y="146" width="230" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The correction option" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89D-dN-fmS">
-                                <rect key="frame" x="105" y="279" width="165" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="which option was right" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89D-dN-fmS">
+                                <rect key="frame" x="105" y="235" width="165" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YAw-dg-7WL">
-                                <rect key="frame" x="124" y="366" width="128" height="148"/>
-                                <state key="normal" title="Next or Finished"/>
+                                <rect key="frame" x="124" y="323" width="128" height="191"/>
+                                <state key="normal" title="Next or done"/>
                                 <connections>
                                     <action selector="toNextScore:" destination="3Jf-LY-GrY" eventType="touchUpInside" id="SIP-fj-ZF2"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="YAw-dg-7WL" firstAttribute="top" secondItem="89D-dN-fmS" secondAttribute="bottom" constant="66.5" id="0Dc-fc-cvD"/>
                             <constraint firstItem="89D-dN-fmS" firstAttribute="leading" secondItem="s1g-en-ObZ" secondAttribute="leadingMargin" constant="89" id="0tr-Ni-ig7"/>
@@ -442,6 +452,9 @@
                                 <include reference="JAd-dp-xQ9"/>
                             </mask>
                         </variation>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="At6-hT-DME" appends="YES" id="Gb3-6D-u23"/>
+                        </connections>
                     </view>
                     <toolbarItems/>
                     <connections>
@@ -453,6 +466,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="haF-yY-8wQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="left" id="At6-hT-DME">
+                    <connections>
+                        <action selector="toNextScore:" destination="3Jf-LY-GrY" id="Ux9-66-0fW"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2368.8000000000002" y="115.59220389805098"/>
         </scene>
@@ -468,7 +486,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You got X/Y" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFt-mV-wy8">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFt-mV-wy8">
                                 <rect key="frame" x="73" y="323" width="230" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -489,6 +507,7 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="d3h-gp-lhR" secondAttribute="trailing" constant="129" id="1mD-Pk-PeN"/>
                             <constraint firstItem="d3h-gp-lhR" firstAttribute="leading" secondItem="LhD-Ph-6uh" secondAttribute="leadingMargin" constant="285" id="2a1-Ao-uqE"/>
@@ -563,12 +582,20 @@
                                 <include reference="pCs-aX-kXX"/>
                             </mask>
                         </variation>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="twN-r4-r83" appends="YES" id="lpY-VP-y9J"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="scoreLabel" destination="AFt-mV-wy8" id="vO0-y3-5pI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DTA-gS-FHa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="left" id="twN-r4-r83">
+                    <connections>
+                        <segue destination="LOc-pK-P2Q" kind="showDetail" id="ZKF-Lw-7dB"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="3064.8000000000002" y="115.59220389805098"/>
         </scene>
@@ -591,6 +618,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Ziq-32-Re0"/>
+        <segue reference="mVk-iB-1G4"/>
         <segue reference="LQd-Zb-f0G"/>
     </inferredMetricsTieBreakers>
 </document>
