--- a/iQuiz/iQuiz/Base.lproj/Main.storyboard
+++ b/iQuiz/iQuiz/Base.lproj/Main.storyboard
@@ -47,10 +47,12 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </tableViewCellContentView>
+                                <gestureRecognizers/>
                                 <connections>
                                     <outlet property="descLabel" destination="cid-ef-3VZ" id="sh7-9Q-Q8o"/>
                                     <outlet property="iconView" destination="uC8-2U-aMv" id="mqV-Vn-ZiC"/>
                                     <outlet property="questionLabel" destination="voj-nI-su8" id="m9K-MX-atA"/>
+                                    <outletCollection property="gestureRecognizers" destination="Hy0-rE-KdU" appends="YES" id="5qv-y8-dnG"/>
                                     <segue destination="Koo-Ox-EEL" kind="show" id="FCr-KT-0QM"/>
                                 </connections>
                             </tableViewCell>
@@ -74,6 +76,7 @@
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mbb-hL-Cjp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="Hy0-rE-KdU"/>
             </objects>
             <point key="canvasLocation" x="1009" y="118"/>
         </scene>
